ethanm/Function/PersonalWorkoutSQL switched from cloud to local storage

--- a/WorkoutLogSP/Views/WorkoutEntry.xaml
+++ b/WorkoutLogSP/Views/WorkoutEntry.xaml
@@ -20,6 +20,7 @@
                 </Picker>
                 <Label  VerticalOptions="Center" FontAttributes="Bold" Text="Workout Summary:" TextColor="White" />
                 <Editor x:Name="WorkSum" VerticalOptions="Center" BackgroundColor="White" Placeholder="Brief Summary of Workout..." HeightRequest="300" />
+                <Label VerticalOptions="Center" FontAttributes="Bold" Text="Send to Coach" TextColor="White"/>
                 <CheckBox x:Name="sendToCoach" VerticalOptions="Center" HorizontalOptions="Start" BackgroundColor="White"/>
                 <!-- Going to change the check box into a switch for better visuality and functionality -->
             </StackLayout>
