--- a/WorkoutLogSP/Views/WorkoutList.xaml
+++ b/WorkoutLogSP/Views/WorkoutList.xaml
@@ -8,7 +8,13 @@
         <ListView x:Name="WorkoutList" Margin="20" ItemSelected="OnItemSelection">
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <TextCell Text="{Binding Description}" Detail="{Binding CurrTime}" TextColor="White" DetailColor="White"/>
+                    <TextCell>
+                        <TextCell.Text>
+                            <MultiBindings>
+                                
+                            </MultiBindings>
+                        </TextCell.Text>
+                    </TextCell>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
