Revert "ethanm/Function/PersonalWorkoutSQL switched from cloud to local storage"
This reverts commit dd0c8ef7bd634d73d1ce97464ab52ad88ac1ae51.

--- a/WorkoutLogSP/Views/WorkoutList.xaml
+++ b/WorkoutLogSP/Views/WorkoutList.xaml
@@ -17,11 +17,12 @@
         <ListView x:Name="WorkoutList" Margin="20" ItemSelected="OnItemSelection">
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <TextCell>
+                    <TextCell Detail="{Binding TimeCreated}" TextColor="White" DetailColor="White">
                         <TextCell.Text>
-                            <MultiBindings>
-                                
-                            </MultiBindings>
+                            <MultiBinding Converter="{StaticResource WorkoutMultibindingConverter}">
+                                <Binding Path="ID"/>
+                                <Binding Path="Type"/>
+                            </MultiBinding>
                         </TextCell.Text>
                     </TextCell>
                 </DataTemplate>
